--- a/paradis/public/css/dashmain.css
+++ b/paradis/public/css/dashmain.css
@@ -431,6 +431,7 @@ nav .top-line img{
     font-size: 18px;
     font-weight: 400;
     margin-top: 20px;
+    margin-bottom: 20px;
     white-space: nowrap;
     color: var(--text-color);
 }
